[project]
name = "aligner"
version = "0.1.0"
description = "Create audio-timed captions from official transcript text."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "faster-whisper>=1.2.1",
    "numpy==1.23.5",
]

[project.scripts]
aligner = "qa:retime_main"
burn-subtitles = "burn:main"
check-transcript = "qa:main"

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["align", "burn", "qa"]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
]
